— Updated the business queries card — Fixed the mobile accordion where text was overlapping the icons.

--- a/_vds-src/scss/_vds-mod-business_queries.scss
+++ b/_vds-src/scss/_vds-mod-business_queries.scss
@@ -1,7 +1,7 @@
 .card.voltas-card.voltas-card-contact-result{
-    margin-bottom: 0;
-    border-right: solid 0.0625rem var(--colors-slate-light_3);
-    border-top: solid 0.0625rem var(--colors-slate-light_3);
+    // margin-bottom: 0;
+    // border-right: solid 0.0625rem var(--colors-slate-light_3);
+    // border-top: solid 0.0625rem var(--colors-slate-light_3);
     width: 100%;
     min-height: 16.5rem;
 }
