--- a/_vds-src/scss/_vds-org-accordion.scss
+++ b/_vds-src/scss/_vds-org-accordion.scss
@@ -15,8 +15,9 @@
                 font-variant: unset;
                 vertical-align: middle;
                 i {
-                    float: right;
-                    padding: 0.25rem 0 0 0;
+                    position: absolute;
+                    top: 2.25rem;
+                    right: 1rem;
                 }
                 
             }
